--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -55,7 +55,7 @@
 @article{budescu1993dominance,
 	title={Dominance analysis: a new approach to the problem of relative importance of predictors in multiple regression.},
 	author={Budescu, David V},
-	journal={Psychological bulletin},
+	journal={Psychological Bulletin},
 	volume={114},
 	number={3},
 	pages={542},
@@ -143,7 +143,7 @@
 @article{azen2003dominance,
 	title={The dominance analysis approach for comparing predictors in multiple regression.},
 	author={Azen, Razia and Budescu, David V},
-	journal={Psychological methods},
+	journal={Psychological Methods},
 	volume={8},
 	number={2},
 	pages={129},
@@ -154,7 +154,7 @@
 @article{johnson2004history,
 	title={History and use of relative importance indices in organizational research},
 	author={Johnson, Jeff W and LeBreton, James M},
-	journal={Organizational research methods},
+	journal={Organizational Research Methods},
 	volume={7},
 	number={3},
 	pages={238--257},
@@ -227,7 +227,7 @@
 @article{cronbach1955construct,
 	title={Construct validity in psychological tests.},
 	author={Cronbach, Lee J and Meehl, Paul E},
-	journal={Psychological bulletin},
+	journal={Psychological Bulletin},
 	volume={52},
 	number={4},
 	pages={281},
@@ -238,7 +238,7 @@
 @article{motowidlo2003job,
 	title={Job performance},
 	author={Motowidlo, Stephan J},
-	journal={Handbook of psychology: Industrial and organizational psychology},
+	journal={Handbook of Psychology: Industrial and Organizational Psychology},
 	volume={12},
 	number={4},
 	pages={39--53},
